--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,35 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+adapter: mysql2
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  username: root
+  password: root
+  host: 127.0.0.1
+  # adapter: sqlite3
+  # pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  # timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+<<: *default
+  database: hello_world_rails_development
+  # <<: *default
+  # database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+<<: *default
+  database: hello_world_rails_test
+  # <<: *default
+  # database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+<<: *default
+  database: hello_world_rails_production
+  username: hello_world_rails
+  password: <%= ENV['HELLO_WORLD_RAILS_DATABASE_PASSWORD'] %>
+  # <<: *default
+  # database: db/production.sqlite3
